syntax = "proto3";

#protoc --go_out=. --plugin=protoc-gen-go=D:/go_workspace/src/soil/proto/ test.proto

message SourceConfig {
    int64 source_id  = 1; //数据集id
    int64 model_type = 2; //模型文件类型 1车辆 2人体 3人脸
    string attrs_config = 3; //属性配置
}

message Request {
  repeated  SourceConfig sources_config = 4;
}


message Response {
  int64 err_code =6; // 错误码
  string err_msg = 7; //错误信息
}

service PredictService {
  rpc predict (Request) returns (Response);
}
